--- a/src/main/webapp/scripts/components/navbar/navbar.html
+++ b/src/main/webapp/scripts/components/navbar/navbar.html
@@ -7,7 +7,7 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="#"><span>Lane Drawing Tool</span> <span class="navbar-version">v{{VERSION}}</span></a>
+            <a class="navbar-brand" href="#"><span>Lane Drawing Tool</a>
         </div>
         <div class="collapse navbar-collapse" id="navbar-collapse" ng-switch="isAuthenticated()">
             <ul class="nav navbar-nav nav-pills navbar-right">
@@ -16,6 +16,25 @@
                         <span class="glyphicon glyphicon-home"></span>
                         <span>Home</span>
                     </a>
+                </li>
+                <li ng-class="{active: $state.includes('street')}" class="dropdown pointer">
+                    <a class="dropdown-toggle" data-toggle="dropdown" href="">
+                                <span>
+                                    <span class="glyphicon glyphicon-road"></span>
+                                    <span class="hidden-tablet">
+                                        Streets
+                                    </span>
+                                    <b class="caret"></b>
+                                </span>
+                    </a>
+                    <ul class="dropdown-menu">
+                        <li ui-sref-active="active"><a ui-sref="listStreets"><span
+                                class="glyphicon glyphicon-list-alt"></span>
+                            &#xA0;<span>List Streets</span></a></li>
+                        <li ui-sref-active="active"><a ui-sref="newStreet"><span
+                                class="glyphicon glyphicon-plus-sign"></span>
+                            &#xA0;<span>New Street</span></a></li>
+                    </ul>
                 </li>
 
                 <li ng-class="{active: $state.includes('tools')}" class="dropdown pointer">
